frontend/src/index.css
html {
  scroll-behavior: smooth;
  scrollbar-color: var(--action-orange) var(--cover-blue);
  scrollbar-width: thin;
}
* {
  margin: 0;
  padding: 0;
}
:root {
  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #2f2d48;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  --typography-size-xsmall: 13px;
  --color-text-neutral-8: rgba(255, 255, 255, 0.87);

  --dark-blue: hsl(216, 43%, 7%);
  --cover-blue: hsl(218, 45%, 10%);
  --action-orange: hsl(29, 100%, 56%);
  --active-orange: hsl(29, 100%, 30%);
  --action-orange-6: hsl(29, 100%, 66%);
  --cube: cubic-bezier(0.42, 0, 0.44, 1.68);
  --hot-tag-bg: hsl(29, 100%, 80%);
  --new-tag-bg: hsl(214, 80%, 30%);
}
#root {
  width: 100%;
  transition: 250ms linear;
}
body {
  margin: 0;
  display: flex;
  place-items: center;
  min-width: 320px;
  min-height: 100svh;
}
.main {
  display: flex;
  flex-direction: column;
  justify-content: center;
  min-height: 100svh;
  min-width: 100%;
}

#root:has(.sidenav.active) {
  margin-left: 180px;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}
h3 {
  color: rgba(255, 255, 255, 0.87);
}

a {
  text-decoration: none;
  color: var(--action-orange-6);
}

button {
  border: none;
  outline: none;
  background-color: transparent;
  cursor: pointer;
}

header {
  position: fixed;
  display: flex;
  align-items: center;
  width: 100%;
  min-height: 7vh;
  top: 0;
  left: 0;
  background: var(--dark-blue);
  z-index: 2;
}
nav {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  width: 100%;
  margin: auto;
  padding: 0 3em;
}
nav .img-transition {
  transition: 300ms ease-in-out;
  cursor: pointer;
}

nav .img-transition:hover {
  transform: scale(1.05);
}

.navbar-links {
  list-style-type: none;
  display: flex;
  flex-direction: row;
  gap: 1em;
}

.navbar-links a {
  color: #fff;
  transition: 150ms ease;
}

.navbar-links .active {
  color: var(--action-orange);
}

.navbar-links a:hover {
  color: hsl(29, 100%, 46%);
}

.navbar-actions {
  display: flex;
  align-items: center;
  flex-direction: row;
  gap: 1em;
  position: relative;
}

.navbar-actions .cart-icon {
  position: relative;
}

.navbar-actions .cart-icon.has-items::after {
  content: attr(data-items);
  position: absolute;
  top: -18px;
  right: 0;

  font-weight: 600;
}

#cart-popover {
  margin-right: 0.4em;
  margin-top: 0.4em;
  inset: auto;
  position-area: bottom;
  padding-top: 1em;
  background-color: #000;
  border: none;
  border-radius: 6px;
  width: 350px;
  max-height: 50svh;

  box-shadow: 0px 0px 10px 0px rgba(255, 255, 255, 0.17);

  scrollbar-color: var(--action-orange) var(--cover-blue);
  scrollbar-width: thin;
}

#cart-popover .cart-quantity {
  padding: 1em;
}

#cart-popover .order-list {
  list-style-type: none;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.order-list .cart-item {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 1em;
}

.order-list .cart-item .cell-pic {
  box-sizing: content-box;
  margin-right: 1em;
  text-align: center;
  white-space: nowrap;
  min-width: 45px;
}

.order-list .cart-item .cell-pic img {
  display: inline-block;
  margin: 0 auto;
  max-width: 100%;
  max-height: 100%;
  vertical-align: middle;
}

.order-list .cart-item .cell .item-details {
  position: relative;
  max-height: 36px;
  overflow: hidden;
  font-size: var(--typography-size-xsmall);
  font-weight: 400;
  margin-right: 2em;
  padding-left: 0;
  color: var(--color-text-neutral-8);
  font-weight: 500;
}

.order-list .cart-item .quantity {
  font-size: var(--typography-size-xsmall);
  margin-top: 8px;
  color: var(--color-text-neutral-8);
  font-weight: 400;
}

.order-list .cell.remove-item {
  padding-right: 0;
  text-align: right;
  flex-grow: 1;
}

.order-list .cell.remove-item img {
  transition: 200ms var(--cube);
}

.order-list .cell.remove-item img:hover {
  opacity: 0.8;
}

#cart-popover .bottom-container {
  display: flex;
  border-radius: 6px;
  box-shadow: 0 2px 8px 0 rgba(255, 255, 255, 0.1);
  padding: 1.5em;
}

.btn-full {
  width: 100%;
  text-align: center;
}

.navbar-actions button {
  border: none;
  background-color: transparent;
  cursor: pointer;
}

.sidenav {
  min-width: 150px;
  height: 100svh;
  position: fixed;
  top: 0;
  left: -50vh;
  display: flex;
  flex-direction: column;
  gap: 2em;
  padding: 8vh 1em;
  z-index: 1;
  background-color: hsla(216, 43%, 5%, 0.99);
  backdrop-filter: blur(8px);
  transition: 300ms ease-in;
}

.sidenav.active {
  left: 0;
}

.sidenav ul {
  width: 100%;
  display: flex;
  flex-direction: column;
  list-style-type: none;
  gap: 1em;
}

.sidenav ul button {
  display: block;
  padding: 0.5em 0.7em;
  border-radius: 6px;
  background-color: transparent;
  border: none;
  font-size: 1em;
  color: #e9e5d8;
  text-decoration: none;
  text-transform: capitalize;
  transition: 200ms ease;
  cursor: pointer;
}

.sidenav ul button:hover,
.sidenav ul button.active {
  background-color: #172b4d;
}

.sidenav .clear-btn {
  border: none;
  border-radius: 6px;
  padding: 0.5em 0.7em;
  color: var(--dark-blue);
  font-size: 1.1em;
  background-color: var(--action-orange);
  transition: 200ms var(--cube);
  cursor: pointer;
}
.sidenav .clear-btn:hover {
  transform: scale(1.04) translateY(-2px);
}

.filters-con {
  margin-top: 10vh;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding-left: 2em;
}

.filters-con ul {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  list-style-type: none;
  gap: 1em;
}
/* ... */

